# annoying_journal

./: .gitignore  Cargo.toml  README.md
src/: main.rs
videos/: 002-demo.webm
