[package]

authors = ["ReactorScram"]
description = "A journal that pops up regularly to force you to write entries"
edition = "2021"
keywords = ["gui", "journal"]
license = "AGPL-3.0"
name = "annoying_journal"
readme = "README.md"
repository = "https://six-five-six-four.com/git/reactor/annoying_journal"
version = "0.1.0"

exclude = [
	"COPYING",
	"README.md",
	"annoying_journal",
	"raw_videos",
	"videos",
]

[dependencies]

chrono = "0.4.19"
fltk = "1.3.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
